# OmniBot

./: .gitmodules  README.md
STM32/: .cproject  .project  STM32F407VGTX_RAM.ld
STM32/Debug/: chatter_F407VG.elf  chatter_F407VG.list  chatter_F407VG.map  makefile  objects.list  sources.mk
omni_bringup/: CMakeLists.txt  package.xml
omni_bringup/launch/: bringup.launch  omni_bringup.launch  omni_simple_bringup.launch
omni_description/: CMakeLists.txt  package.xml
omni_description/launch/: urdf_visual.launch
omni_description/rviz/: model.rviz
omni_description/urdf/: omni.urdf.xacro
omni_firmware/: .cproject  .mxproject  README.md  STM32F407VGTX_FLASH.ld  chatter_F407VG.ioc  chatter_F407VG.launch
omni_firmware/Debug/: chatter_F407VG.elf  chatter_F407VG.hex  chatter_F407VG.list  chatter_F407VG.map  makefile  objects.list  sources.mk
omni_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
omni_navigation/launch/: amcl.launch  move_base.launch  omni_carto_nav.launch  omni_navigation.launch
omni_navigation/maps/: map1.pgm  map1.yaml  map_207.yaml  map_carto1.pgm  map_carto1.yaml
omni_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
omni_robot/: CMakeLists.txt  package.xml
omni_robot/launch/: omni_odom.launch
omni_robot/src/: odom_publisher.py
omni_slam/: CMakeLists.txt  package.xml
omni_slam/config/: dat.lua  gmapping_params.yaml  localization.lua  (+6 more)
place_recognition/: CMakeLists.txt  package.xml
(+215 files in other folders)
